[gd_scene load_steps=3 format=3 uid="uid://bjfb3pjs7xrbf"]

[ext_resource type="Script" uid="uid://dillbmq2hj41a" path="res://Scripts/FirstScreen/main_menu_scene.gd" id="1_hqyvb"]
[ext_resource type="Script" uid="uid://cn43wlv5flkoq" path="res://Scripts/FirstScreen/select_session.gd" id="2_s3swi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hqyvb")
metadata/_edit_vertical_guides_ = [575.0]

[node name="MainMenuUI" type="CanvasLayer" parent="."]

[node name="BeginHypnosisButton" type="Button" parent="MainMenuUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -112.0
offset_right = 155.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
text = "Begin Hypnosis"

[node name="SessionSelectButton" type="Button" parent="MainMenuUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = 141.0
offset_right = 83.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Session"

[node name="BeginEditingButton" type="Button" parent="MainMenuUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -32.0
offset_right = -169.0
offset_bottom = 43.0
grow_horizontal = 0
grow_vertical = 2
text = "Edit Session"

[node name="SessionSelectedLabel" type="Label" parent="MainMenuUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -348.0
offset_top = -112.0
offset_right = 348.0
grow_horizontal = 2
grow_vertical = 0
text = "Loaded file:
Nothing loaded"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VersionLabel" type="Label" parent="MainMenuUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -135.0
offset_top = -34.0
offset_right = -14.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0-dev"
horizontal_alignment = 2

[node name="SelectSession" type="FileDialog" parent="MainMenuUI"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 4
size = Vector2i(800, 450)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.hypsav")
script = ExtResource("2_s3swi")

[node name="SceneContainer" type="Node2D" parent="."]

[connection signal="pressed" from="MainMenuUI/BeginHypnosisButton" to="." method="_handle_begin_hypnosis_pressed"]
[connection signal="pressed" from="MainMenuUI/SessionSelectButton" to="MainMenuUI/SelectSession" method="_handle_load_file_pressed"]
[connection signal="pressed" from="MainMenuUI/BeginEditingButton" to="." method="_handle_begin_editing_button_pressed"]
[connection signal="file_selected" from="MainMenuUI/SelectSession" to="MainMenuUI/SelectSession" method="_handle_file_selected"]
